# XMU-learning_CVXOPT

./: .gitignore
HW/0915/: main.tex
HW/0916/: main.tex
HW/0927/: main.tex
HW/0928/: main.tex
HW/1016/: main.tex
HW/1027/: main.tex
HW/1125/: main.tex
HW/1209/: main.tex
Lab/: pyproject.toml
Lab/0917/: Lab1.ipynb
Lab/0917/Assets/Data/: train_exam.txt
Lab/1015/: Lab2.ipynb  Lab3.ipynb
Lab/1029/: Lab4.ipynb
Lab/1112/: Lab4.ipynb
Lab/1126/: Lab7.ipynb
Lab/1210/: Lab8.ipynb
Lab/1224/: Lab9.ipynb
