[project]
name = "XMU-learning_CVXOPT"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Exxon", email = "exxonliu001@yahoo.com"},
]
dependencies = ["numpy>=2.3.3", "sympy>=1.14.0", "scipy>=1.16.2", "matplotlib>=3.10.6", "plotly>=6.3.0", "ipykernel>=6.30.1", "nbformat>=5.10.4", "ipympl>=0.9.7", "pandas>=2.3.2", "nbconvert>=7.16.6", "pandoc>=2.4"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
